# params-proto

./: .editorconfig  .gitignore  .readthedocs.yaml  ANSI_HELP_CONSIDERATIONS.md  CLAUDE.md  LICENSE.md  LIST_TYPE_CLI_TESTS_SUMMARY.md  LIST_TYPE_TESTING_README.md  LIST_TYPE_TESTS_INDEX.md  Makefile  Makefile.uv  README  README.md  TEST_EXAMPLES_AND_DEBUGGING.md  TEST_RESULTS_SUMMARY.md  pyproject.toml  requirements-dev.txt  setup.py
.claude-plugin/: marketplace.json  plugin.json
.run/: pytest for test_neo_proto_cli.run.xml  pytest in test_params_proto.run.xml
docs/: conf.py  index.md  migration.md  quick_start.md  release_notes.md  requirements.txt
docs/_static/: ansi.css  custom.css
docs/api/: hyper.md  index.md  proto.md  utils.md
docs/examples/: advanced_features.md  basic_usage.md  cli_applications.md  environment_variables.md  hyperparameter_sweeps.md  index.md  ml_training.md  nested_configs.md  rl_agent.md
docs/guide/: ansi_formatting.md  classes.md  decorators.md  functions.md  overrides.md  prefixes.md  types.md
docs/key_concepts/: advanced_patterns.md  ansi_formatting.md  claude_skill.md  cli-fundamentals.md  cli-patterns.md  cli_generation.md  cli_guide.md  configuration-patterns.md  configuration_basics.md  core-concepts.md  environment_variables.md  function_best_practices.md  help-generation.md  hyperparameter_sweeps.md  naming-conventions.md  overrides.md  parameter-iteration.md  parameter-overrides.md  piter.md  type-system.md  types.md  union_types.md  welcome.md
examples/: union_subcommands.py
params_proto/: __init__.py  hyper.py  neo_hyper.py  neo_partial.py  neo_proto.py  params_proto.py  parse_env_template.py  proto.py  test_neo_proto.py  test_params_proto.py  utils.py
params_proto/test_fixtures/: main.py
params_proto/v1/: params_proto.py
scratch/: demo_neo_proto.py  demo_params_proto.py  demo_v3.py  hyper_poc.py  proto_DAT_scratch.py  proto_dependency_tree_pattern.py
skill/: index.md  quick-reference.md
skill/api/: proto-cli.md  proto-prefix.md  types.md
skill/examples/: patterns.md
skill/features/: environment-vars.md  help-generation.md  sweeps.md
skill/references/: cli-and-types.md  environment-vars.md  patterns.md  sweeps.md
skills/: params-proto.skill
skills/params-proto/: SKILL.md
src/params_proto/: __init__.py  ansi_help.py  app.py  cli_parse.py  documentation.py  envvar.py  func.py  help_gen.py  hyper.py  parse_env_template.py  proto.py  type_utils.py
test_params_proto/: test_hyper.py  test_neo_hyper.py  test_neo_proto.py  test_neo_proto_cli.py  test_neo_proto_partial.py  test_params_proto.py  test_utils.py
test_params_proto/test_fixtures/: main.py
test_params_proto/test_v1/: test_hyper.py  test_params_proto.py
tests/: test_Eval.py  test_neo_proto.py  test_neo_proto_cli.py  test_parse_env_template.py  test_utils.py
tests/test_v1/: test_hyper.py  test_params_proto.py
tests/test_v2/: test_neo_hyper.py  test_neo_proto_cli.py  test_neo_proto_partial.py  test_parse_env_template.py
tests/test_v3/: conftest.py  test_Eval.py  test_advanced_types.py  test_class_level_methods.py  test_cli_parsing.py  test_neo_proto.py  (+16 more)
(+23 files in other folders)
