[project]
name = "params-proto"
version = "3.0.0-rc23"
description = "Modern Hyper Parameter Management for Machine Learning"
authors = [
    { name = "Ge Yang" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "params_proto",
    "decorator",
    "argparse",
    "argcomplete",
    "auto-completion",
    "autocomplete",
    "shell arguments",
    "argument parser",
    "hyperparameter",
    "machine learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "waterbear>=2.6.8",
    "argparse",
    "argcomplete",
    "expandvars",
    "termcolor",
]

[project.urls]
Homepage = "https://github.com/geyang/params-proto"
Documentation = "https://params-proto.readthedocs.io"
Repository = "https://github.com/geyang/params-proto"
"Bug Tracker" = "https://github.com/geyang/params-proto/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",  # Parallel test execution
    "restructuredtext-lint",
    "twine",
    "ruff",
    "pandas",  # Required for sweep loading tests
]
docs = [
    "sphinx>=4.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "tomli>=1.1.0; python_version < '3.11'",  # For reading pyproject.toml in conf.py
    # Note: sphinxcontrib-ansi must be installed separately from git
    # pip install git+https://github.com/geyang/ansi.git@c0d28fe
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/params_proto"]

[tool.ruff]
target-version = "py38"
line-length = 140
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--capture=sys"
# For parallel execution, use: pytest -n auto
# Note: Single-threaded is faster for this suite due to fast tests
